# STM32F407_Dev

./: .clang-format  .clangd  .gitignore  .mxproject  1_MyTestPro.ioc  CMakeLists.txt  Makefile  README.md  openocd.cfg
Core/Inc/: main.h  stm32f4xx_it.h
Core/Src/: freertos.c  gpio.c  main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c  tim.c  usart.c
Include/: FreeRTOSConfig.h  Led.h  key.h  led.h  main.h  tim.h  usart.h
src/: Led.cpp  key.c  led.c  led.cpp  main.c  main.cpp  mock.c  msp.c  stm32f4xx_hal_timebase_tim.c  tim.c  usart.c
